--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,19 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#https://github.com/Npradheepan/API_MENU_HOME_PAGE.git
+
+#…or create a new repository on the command line
+echo "# API_MENU_HOME_PAGE" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/Npradheepan/API_MENU_HOME_PAGE.git
+git push -u origin main
+
+#…or push an existing repository from the command line
+git remote add origin https://github.com/Npradheepan/API_MENU_HOME_PAGE.git
+git branch -M main
+git push -u origin main
